# Machine-learning-based-source-apportionment-for-organic-aerosols

./: .gitignore  README.md  pyproject.toml
resources/: RusanenEtAl_synthetic.xlsx  library.xlsx  predictions_model_98feat_adaptive.meta.txt  predictions_model_98feat_elasticnet.meta.txt  predictions_model_98feat_l1.meta.txt  predictions_model_98feat_l2.meta.txt  predictions_model_98feat_xgboost.meta.txt  ~$library.xlsx
src/classifier/: Autoencoders.py  Data_Athens_transformation.py  Measurements.py  NMF.py  Train_AE.py  ams_sparse_logreg_predict.py  ams_sparse_logreg_train.py  create_synthetic_fractions_csv.py  logger.py  predict_xlsx_2_csv.py  prob_class_comparison.py  train_xlsx_2_csv.py
