[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["apmariglis <apmariglis@gmail.com>"]
readme = "README.md"
packages = [{include = "classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
pandas = "^2.3.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"
xgboost = "^3.0.5"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
