[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["apmariglis <apmariglis@gmail.com>"]
readme = "README.md"
packages = [{include = "classifier", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.3.3"
pandas = "^2.3.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"
xgboost = "^3.0.5"
torch = "^2.9.0"
torchvision = "^0.24.0"
torchaudio = "^2.9.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
